--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "@tanstack/react-router": "^1.131.35",
     "@types/three": "^0.179.0",
     "elysia": "^1.3.21",
     "react": "^19",
