--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-router": "^1.131.35",
     "@types/three": "^0.179.0",
     "elysia": "^1.3.21",
+    "lucide-react": "^0.556.0",
     "react": "^19",
     "react-dom": "^19",
     "three": "^0.180.0"
